vlib/v/parser/tests/method_call_receiver_err.out
vlib/v/parser/tests/method_call_receiver_err.vv:9:11: error: the receiver of the method call must be an instantiated object, e.g. `foo.bar()`
    7 |
    8 |     $for method in S1.methods {
    9 |         println(S1.method_hello('yo'))
      |                 ~~
   10 |     }
   11 | }
